# slash-command-manager

./: .cspell.json  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  __version__.py  hatch_build.py  pyproject.toml  server.py  test_config.toml
.claude/commands/: generate-spec.md  generate-task-list-from-spec.md  manage-tasks.md
.github/: SECURITY.md
.github/workflows/: ci.yml  publish-to-pypi.yml  release.yml
docs/: ARCHITECTURE.md  GITHUB_METADATA_CHECKLIST.md  GitHub_Branch_Download_Bug.md  mcp-prompt-support.md  operations.md  slash-command-generator.md
docs/artifacts/: README.md
docs/artifacts/0001/task-2.0/: README.md  task-2.0-cli-help-output.txt  task-2.0-pyproject-entry-points.txt
docs/artifacts/0001/task-3.0/: README.md
docs/artifacts/0001/task-5.0/: README.md  task-5.0-readme-migration-section.txt
docs/artifacts/comprehensive-issue-resolution/: task-2-package-build-verification.md
docs/specs/01-slash-command-manager-extraction/: 01-slash-command-manager-extraction.md  01-task-slash-command-manager-extraction.md
docs/specs/02-comprehensive-issue-resolution/: 02-comprehensive-issue-resolution.md  02-task-comprehensive-issue-resolution.md
docs/specs/02-comprehensive-issue-resolution/02-proofs/: COMPLETION-SUMMARY.md
docs/specs/03-unified-cli-consolidation/: 03-spec-unified-cli-consolidation.md  03-tasks-unified-cli-consolidation.md
docs/specs/04-github-repository-support/: 04-tasks-github-repository-support.md
docs/specs/04-spec-github-repository-support/: 04-spec-github-repository-support.md  04-tasks-github-repository-support.md
docs/specs/04-spec-github-repository-support/04-proofs/: 04-task-01-proofs.md  04-task-02-proofs.md  04-task-03-proofs.md  04-task-04-proofs.md  04-task-05-proofs.md  DEMO_VERIFICATION_REPORT.md  VALIDATION_REPORT.md
docs/specs/04-unified-cli-consolidation/: 04-tasks-unified-cli-consolidation.md  04-unified-cli-consolidation.md
docs/specs/05-docker-integration-tests/: 05-tasks-docker-integration-tests.md
docs/specs/05-docker-integration-tests/05-proofs/: 05-task-01-proofs.md  (+3 more)
docs/specs/05-github-repository-support/: 05-spec-github-repository-support.md  05-tasks-github-repository-support.md
docs/specs/05-spec-pre-commit-cspell/: 05-spec-pre-commit-cspell.md  05-tasks-pre-commit-cspell.md
docs/specs/06-spec-cli-safety-enhancements/: 06-tasks-cli-safety-enhancements.md
docs/specs/07-spec-list-command/: 07-questions-1-list-command.md  07-spec-list-command.md  07-tasks-list-command.md  07-validation-list-command.md
docs/specs/07-spec-vs-code-macos-detection/: 07-questions-1-vs-code-macos-detection.md  07-spec-vs-code-macos-detection.md  07-tasks-vs-code-macos-detection.md  07-validation-vs-code-macos-detection.md
docs/specs/08-spec-list-all-files-flag/: 08-questions-1-list-all-files-flag.md  08-spec-list-all-files-flag.md  08-tasks-list-all-files-flag.md  08-validation-list-all-files-flag.md
docs/specs/08-spec-vs-code-insiders-support/: 08-questions-1-vs-code-insiders-support.md  08-spec-vs-code-insiders-support.md  08-tasks-vs-code-insiders-support.md  08-validation-vs-code-insiders-support.md
docs/specs/09-spec-rename-to-slash-man/: 09-questions-1-rename-to-slash-man.md  09-spec-rename-to-slash-man.md  09-tasks-rename-to-slash-man.md  09-validation-rename-to-slash-man.md
docs/specs/10-spec-pypi-publishing/: 10-questions-1-pypi-publishing.md  10-spec-pypi-publishing.md  10-tasks-pypi-publishing.md  AUDIT-REPORT.md
mcp_server/: __init__.py  config.py  prompt_utils.py
scripts/: run_integration_tests.py
slash_commands/: __init__.py  cli.py  cli_utils.py  config.py  generators.py  github_utils.py  list_discovery.py  prompt_utils.py  telemetry.py  writer.py
tasks/: 0001-spec-slash-command-manager-extraction.md  0002-spec-comprehensive-issue-resolution.md  tasks-0001-spec-slash-command-manager-extraction.md  tasks-0002-spec-comprehensive-issue-resolution.md
tests/: conftest.py  test_cli.py  test_cli_version.py  test_config.py  test_detection.py  test_generators.py  test_github_integration.py  test_github_utils.py  test_list_discovery.py  test_prompts.py  test_single_overwrite_prompt.py  test_validation.py  test_version.py  test_writer.py
tests/integration/: conftest.py  test_basic_commands.py  test_cleanup_command.py  test_filesystem_and_errors.py  test_generate_command.py  test_generate_output.py  test_list_command.py  test_overwrite_prompt.py  test_prompt_discovery.py
(+36 files in other folders)
