[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slash-command-manager"
version = "1.0.0"
description = "Slash Command Generator and MCP Server for SDD Workflow"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Liatrio", email = "info@liatrio.com"}
]
keywords = ["cli", "generator", "mcp", "slash-commands", "sdd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp",
    "questionary>=1.10.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
slash-man = "slash_commands.cli:main"
slash-command-manager = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["slash_commands", "mcp_server"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py files

[tool.ruff.lint.isort]
known-first-party = ["slash_commands", "mcp_server"]

[tool.semantic_release]
# Use annotated tags like v1.2.3
tag_format = "v{version}"
# Default commit parser (Angular/Conventional Commits)
# Generate changelog and commit version bumps
# Update the version field in pyproject.toml
version_toml = ["pyproject.toml:project.version"]
# Ensure uv.lock stays in sync with version changes and is committed
# Run uv to refresh the lock file, then stage it so PSR includes it
# Also build the package to ensure build hooks run
build_command = """
set -euo pipefail
# Update PATH idempotently to include common uv installation location
if [[ ":$PATH:" != *":$HOME/.local/bin:"* ]]; then
  export PATH="$HOME/.local/bin:$PATH"
fi
# Check if uv is already installed
if command -v uv >/dev/null 2>&1; then
  echo "uv is already installed: $(uv --version)"
else
  # Download installer to temporary file
  INSTALLER=$(mktemp)
  trap "rm -f $INSTALLER" EXIT
  curl -fL https://astral.sh/uv/install.sh -o "$INSTALLER" || { echo "Failed to download uv installer"; exit 1; }
  # Basic verification: ensure file is not empty and contains expected content
  if [ ! -s "$INSTALLER" ] || ! grep -q "uv" "$INSTALLER"; then
    echo "Downloaded installer appears invalid"; exit 1
  fi
  # Run installer with explicit error handling
  sh -s < "$INSTALLER" || { echo "uv installation failed"; exit 1; }
  # Update PATH again after installation (idempotent)
  if [[ ":$PATH:" != *":$HOME/.local/bin:"* ]]; then
    export PATH="$HOME/.local/bin:$PATH"
  fi
  # Verify uv was installed
  if ! command -v uv >/dev/null 2>&1; then
    echo "uv installation verification failed"; exit 1
  fi
fi
# Confirm uv is available before proceeding
if ! command -v uv >/dev/null 2>&1; then
  echo "uv is not available after installation"; exit 1
fi
# Run uv lock
uv lock || { echo "uv lock failed"; exit 1; }
# Conditionally stage uv.lock only if it changed
if git diff --quiet uv.lock; then
  echo "uv.lock unchanged, skipping git add"
else
  git add uv.lock || { echo "git add uv.lock failed"; exit 1; }
fi
# Build package only after confirming uv is installed
python -m build --wheel --sdist || { echo "build failed"; exit 1; }
"""
# Generate changelog and commit version bumps
assets = ["uv.lock"]

[tool.semantic_release.changelog]
# Generate CHANGELOG.md in Markdown
default_templates = { changelog_file = "CHANGELOG.md", output_format = "md" }

[tool.semantic_release.branches]
# Release from the main branch
main = { match = "main" }

[dependency-groups]
dev = [
    "build>=1.3.0",
]
